# turnpike

./: README.md
NetworkManager-novellvpn-0.8/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  nm-novellvpn-service.conf  nm-novellvpn-service.name  nm-novellvpn-service.name.in
NetworkManager-novellvpn-0.8/auth-dialog/: Makefile.am  Makefile.in  gnome-two-password-dialog.c  main.c
NetworkManager-novellvpn-0.8/common-gnome/: Makefile.am  Makefile.in  keyring-helpers.h
NetworkManager-novellvpn-0.8/po/: ChangeLog  POTFILES.in  cs.po  es.po  fi.po  fr.po  sv.po
NetworkManager-novellvpn-0.8/properties/: Makefile.am  Makefile.in  import-export.c  import-export.h  nm-novellvpn-dialog.glade
NetworkManager-novellvpn-0.8/src/: Makefile.am  Makefile.in  mtu.c  nm-novellvpn-service-novellvpn-helper.c  nm_novellvpn_racoon_launcher.sh
ipsec-tools-0.7.1/: ChangeLog  configure.ac  series
ipsec-tools-0.7.1/.pc/: applied-patches
ipsec-tools-0.7.1/.pc/nit-includes.diff/: configure.ac
ipsec-tools-0.7.1/.pc/no_werror.patch/: configure.ac
ipsec-tools-0.7.1/.pc/novell-ipsec-tools_plugins-support-nortel.patch/: configure.ac
ipsec-tools-0.7.1/rpm/suse/: ipsec-tools.spec
ipsec-tools-0.7.1/src/: Makefile.am
ipsec-tools-0.7.1/src/plugin_frame/: Makefile.am  common.h  dispatch.c  error.h  framework.h  hashtable.c  hashtable.h  position.h  registration.c
ipsec-tools-0.7.1/src/racoon/: Makefile.am  admin.c  admin.h  algorithm.c  algorithm.h  cfparse.y  cfparse_proto.h  cftoken.c  cftoken.l  handler.c  ipsec_doi.c  ipsec_doi.h  isakmp.c  isakmp_agg.c  isakmp_cfg.c  isakmp_ident.c  isakmp_inf.c  isakmp_quick.c  isakmp_var.h  localconf.c  localconf.h  main.c  nattraversal.c  nattraversal.h  oakley.c  pfkey.c  pfkey.h  racoon.conf.5  remoteconf.c  remoteconf.h  sainfo.c  sainfo.h
ipsec-tools-0.7.1/src/setkey/: token.c
novell-nortelplugins-0.1.4/: AUTHORS  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure
novell-nortelplugins-0.1.4/include-fix/.svn/: all-wcprops  entries
novell-nortelplugins-0.1.4/include-fix/net/: pfkeyv2.h
novell-nortelplugins-0.1.4/include-fix/netinet/: ipsec.h
novell-nortelplugins-0.1.4/nortel/: Makefile.am  Makefile.in
novell-nortelplugins-0.1.4/nortel/cli/: Makefile.am  Makefile.in  phase2.c  phase2.h  profile.h
novell-nortelplugins-0.1.4/nortel/common/: Makefile.am  Makefile.in  helper.h  norteladmin.c  norteladmin.h  plog.h
novell-nortelplugins-0.1.4/nortel/gui/: Makefile.in  adminport.c  connection.c  hooks.h  phase1.h  profile.c
novell-nortelplugins-0.1.4/nortel/ike/: Makefile.am  Makefile.in  attrgen.c  attrgen.h  fwinterface.c  nortel_cfg.c  nortel_inf.c  nortel_nat.c  nortel_vmbuf.c  packets.h  registerattr.h  registerpayload.c  registerpayload.h  utility.c  utility.h
novellvpn/: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  autogen.sh  configure.in  nm-novellvpn-service.conf  nm-novellvpn.desktop.in
novellvpn/auth-dialog/: Makefile.am  gnome-two-password-dialog.c  gnome-two-password-dialog.h  main.c  profile.c  profile.h
novellvpn/common-gnome/: Makefile.am  keyring-helpers.c  keyring-helpers.h
novellvpn/doc/: example-vpnc-system-wide-connection.sh
novellvpn/po/: LINGUAS  POTFILES.in  ar.po  cs.po  da.po  de.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  hu.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  zh_CN.po  zh_TW.po
novellvpn/properties/: Makefile.am  nm-novellvpn-dialog.ui  nm-novellvpn-propertiesui.c  nm-novellvpn-propertiesui.h  nm-novellvpn-vpnui-impl.c  nm-novellvpn.c  nm-novellvpn.h
novellvpn/src/: Makefile.am  nm-novellvpn-service-novellvpn-helper.c  nm-novellvpn-service.c  nm-novellvpn-service.h
plugins/: ChangeLog  NEWS  autogen.sh  configure.in  dnsupdate  ipalias
plugins/nortel/: README
plugins/nortel/cli/: adminport.c  adminport.h  connection.c  helper.c  helper.h  hooks.c  hooks.h  init.c  nortelcli.h  phase1.c  phase1.h  profile.c  racoon.c
plugins/nortel/common/: encrypt.c  encrypt.h  helper.c  profile.c  profile.h
plugins/nortel/gui/: Makefile.am  adminport.h  authframe.c  authframe.h  entrypoint.c  hooks.c  phase1.c  phase2.c  phase2.h  racoon.c
plugins/nortel/ike/: attrcheck.c  callbacks.c  callbacks.h  nortel_cfg.h  nortel_inf.h  nortel_nat.h  nortel_vmbuf.h  packets.c  payloadcheck.c  payloadgen.c  payloadgen.h  registerattr.c  utility.c
plugins/rpm/: Makefile.am  novell-nortelplugins.spec.in
turnpike/: Makefile.am  configure.ac  vpn_TroubleShooting.sh
turnpike-0.1.2/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  config.h.in  configure  package_version.h.in  series
turnpike-0.1.2/.pc/: applied-patches
turnpike-0.1.2/ErrorGenerator/: ChangeLog  Makefile.am  Makefile.in  vpncErrorHandling.c  vpncErrorHandling.h  vpncErrorHandlingGenerator.c  vpncErrorHandlingSupport.c
turnpike-0.1.2/VPNClient/: ChangeLog  Makefile.am  Makefile.in
turnpike-0.1.2/VPNClient/CommonUI/: CommonUI.c  Makefile.am  Makefile.in  plog.c  sockInterface.c  vpncExtCert.c
turnpike-0.1.2/VPNClient/include/: CommonUI.h  cliErrors.h  commoncli.h  guiErrors.h  plog.h  racoonconf.h  sockInterface.h  tpike-types.h  vpncExtCert.h
turnpike-0.1.2/VPNClient/vpnc/: Makefile.am  Makefile.in
turnpike-0.1.2/VPNClient/vpnc/src/: Makefile.am  Makefile.in  adminPortInterface.c  cli.c  commandHandler.c  profile.c  utility.c
turnpike-0.1.2/VPNClient/vpnlogin/: Makefile.am  Makefile.in
turnpike-0.1.2/VPNClient/vpnlogin/include/: externs.h  gui-hooks.h  profile.h  unicodeconv.h  utility.h
turnpike-0.1.2/VPNClient/vpnlogin/src/: Makefile.am  Makefile.in  callbacks.c  main.c  menuUpdate.c  ui-helpers.h  utility.c
turnpike-0.1.2/po/: ChangeLog  POTFILES.in
turnpike-0.1.2/rpm/: turnpike.spec.in
turnpike-0.1.2/utility/: ChangeLog  Makefile.am  Makefile.in  getip.c  getip.h
turnpike/vpnlogin/: vpnlogin.desktop  vpnlogin.glade
turnpike/vpnlogin/src/: callbacks.h  gui-hooks.c  interface.c  interface.h  makeUpdateMenu  ph2fill.c  profile.c  ui-helpers.c  utility.c  vpncGetInterface.c  widgets.h
(+15 files in other folders)
