## Process this file with automake to produce Makefile.in

SUBDIRS = src

#EXTRA_DIST = \
#	./images/vpnlogin.png ./images/vpnlogin.gif vpnlogin.desktop ./src/vpnUpdateMenu vpn_docbook/figures/*.gif \
#	vpn_docbook/vpn_linux.xml ./src/guiErrors.h
EXTRA_DIST = include/externs.h  include/profile.h  include/unicodeconv.h  \
		include/utility.h include/gui-hooks.h\
	vpnlogin.desktop

include_turnpike_HEADERS= include/gui-hooks.h

#noinst_HEADERS=messages.h turnFrame.h

